--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -191,6 +191,10 @@ links:
                       - origins:using_item
                       - origins:xp_levels
                       - origins:xp_points
+
+                      - $Apugli
+
+                      - apugli:entity_in_radius
                     more:
                         string-origins:and:
                             conditions:
@@ -714,6 +718,23 @@ links:
                             compare_to:
                                 desc: The value to compare to.
                                 type: integer
+                        string-apugli:entity_in_radius:
+                            condition:
+                                desc: The entity condition type to check for.
+                                link: entity_cond
+                            bientity_condition:
+                                desc: The bi-entity condition type to check for with the entity with this condition as the actor and the entities in the radius as the targets.
+                                link: bi_entity_cond
+                            radius:
+                                desc: The radius to check the entities that fulfill the specified entity condition type within.
+                                type: float
+                            comparison:
+                                desc: How the amount of entities within the specified radius which fulfills the specified entity/bi-entity condition type(s) should be compared to the specified value.
+                                link: comparison
+                            compare_to:
+                                desc: The value to compare the amount to.
+                                type: integer
+                                default: 1
           - title: custom
             link: custom_condition
     item_cond:
@@ -1437,6 +1458,10 @@ links:
                       - origins:swing_hand
                       - origins:toggle
                       - origins:trigger_cooldown
+
+                      - $Apugli
+
+                      - apugli:fire_projectile
                     more:
                         string-origins:nothing: {}
                         string-origins:and:
@@ -2049,6 +2074,37 @@ links:
                                 type: string
                                 allow: '*a-z0-9_\/:.-'
                                 hooks: [ns]
+                        string-apugli:fire_projectile:
+                            entity_type:
+                                desc: The ID of the entity type that will be fired.
+                                type: string
+                                allow: '*a-z0-9_#\/:.-'
+                            count:
+                                desc: The amount of projectiles to fire each use. Defaults to 1.
+                                type: integer
+                                default: 1
+                                min: 1
+                            speed:
+                                desc: The speed applied to the fired projectile. Defaults to 1.5.
+                                type: number
+                                min: 0
+                                default: 1.5
+                            divergence:
+                                desc: How much each projectile fired is affected by random spread. Defaults to 1.
+                                type: number
+                                min: 0
+                                default: 1
+                            sound:
+                                desc: If set, the sound with this ID will be played when the power is used.
+                                type: string
+                                allow: '*a-z0-9_#\/:.-'
+                            tag:
+                                desc: NBT data of the entity.
+                                type: string
+                                ext: true
+                            bientity_action:
+                                desc: An action which will run on the projectile.
+                                link: bi_entity_action
           - title: custom
             link: custom_action
     item_action:
@@ -2213,6 +2269,10 @@ links:
                       - origins:explode
                       - origins:modify_block_state
                       - origins:set_block
+
+                      - $apugli
+
+                      - apugli:destroy
                     more:
                         string-origins:nothing: {}
                         string-origins:and:
@@ -2369,6 +2429,11 @@ links:
                             block:
                                 desc: The ID of the block to place at the targeted position, overwriting the block already there.
                                 type: string
+                        string-apugli:destroy:
+                            drop_block:
+                                desc: Whether the block is dropped upon destroying it.
+                                href: https://apugli.readthedocs.io/en/latest/types/block_action_types/destroy/
+                                type: boolean
           - title: custom
             link: custom_action
     badge:
@@ -2565,6 +2630,15 @@ links:
                   - $Addon Types (Require Addons!)
 
                   - extraorigins:modify_size
+
+                  - $Apugli
+
+                  - $Regular Types
+
+                  - apugli:custom_death_sound
+                  - apugli:custom_hurt_sound
+                  - apugli:edible_item
+                  - apugli:energy_swirl
                   - apugli:mobs_ignore
                 more:
                     string-origins:attribute_modify_transfer:
@@ -4086,9 +4160,94 @@ links:
                                 type: string
                                 allow: '*a-z0-9_\/:.-'
                                 default: extraorigins:modify_size
+                    string-apugli:custom_death_sound:
+                        muted:
+                            desc: Determines whether the death sound should be muted.
+                            href: https://apugli.readthedocs.io/en/latest/types/power_types/custom_death_sound/
+                            type: boolean
+                            default: false
+                        sound:
+                            desc: If specified, this sound event will play instead of the original death sound of the entity that has the power.
+                            link: apugli_weighted_sound_event
+                        sounds:
+                            desc: If specified, these sound events will play instead of the original death sound of the entity that has the power in a random fashion.
+                            type: list
+                            vals:
+                                link: apugli_weighted_sound_event
+                        volume:
+                            desc: Determines the volume of the sound event(s) being played.
+                            type: number
+                            default: 1.0
+                        pitch:
+                            desc: Determines the pitch of the sound event(s) being played.
+                            type: number
+                            default: 1.0
+                    string-apugli:custom_hurt_sound:
+                        muted:
+                            desc: Determines whether the hurt sound should be muted.
+                            href: https://apugli.readthedocs.io/en/latest/types/power_types/custom_hurt_sound/
+                            type: boolean
+                            default: false
+                        sound:
+                            desc: If specified, this sound event will play instead of the original hurt sound of the entity that has the power.
+                            link: apugli_weighted_sound_event
+                        sounds:
+                            desc: If specified, these sound events will play instead of the original hurt sound of the entity that has the power in a random fashion.
+                            type: list
+                            vals:
+                                link: apugli_weighted_sound_event
+                        volume:
+                            desc: Determines the volume of the sound event(s) being played.
+                            type: number
+                            default: 1.0
+                        pitch:
+                            desc: Determines the pitch of the sound event(s) being played.
+                            type: number
+                            default: 1.0
+                    string-apugli:edible-item:
+                        item_condition:
+                            desc: The item condition that items must satisfy to be affected by this power.
+                            href: https://apugli.readthedocs.io/en/latest/types/power_types/edible_item
+                            link: item_cond
+                        food_component:
+                            desc: The food component that the item grants upon eating it.
+                            link: apugli_food_component
+                        use_action:
+                            desc: The action to associate with the player. One of eat or drink. Defaults to eat when null.
+                            enum: ['eat','drink']
+                        return_stack:
+                            desc: The item stack to replace the item with upon consumption.
+                            link: item_stack
+                        sound:
+                            desc: ID of the sound to play while eating an item affected by this power. If not set this will be the default eating/drinking sound.
+                            type: string
+                            allow: '*a-z0-9_#\/:.-'
+                        entity_action:
+                            desc: If set, these action(s) will be executed on the entity eating this item.
+                            link: entity_action
+                        item_action:
+                            desc: If set, these action(s) will be executed on the item that the entity ate.
+                            type: item_action
+                    string-apugli:energy_swirl:
+                        texture_location:
+                            desc: If specified, the texture used for the energy swirl overlay.
+                            href: https://apugli.readthedocs.io/en/latest/types/power_types/energy_swirl/
+                            type: string
+                        texture_url:
+                            desc: If specified, the url to a .png file imported into the game as a texture for this power's use. This will be used as a fallback if texture_location is not specified or if a texture is not present.
+                            type: string
+                        size:
+                            desc: The scale relative to the entity at which the energy swirl will render at.
+                            type: number
+                            default: 1.0
+                        speed:
+                            desc: The speed at which the overlay swirls around the player. You can set this to 0 if you want a static overlay.
+                            type: number
+                            default: 0.01
                     string-apugli:mobs_ignore:
                         mob_condition:
                             desc: If set, mobs will ignore (and not attack) the entity with this power if they meet this condition.
+                            href: https://apugli.readthedocs.io/en/latest/types/power_types/mobs_ignore
                             link: entity_cond
                         bientity_condition:
                             desc: If set, mobs will ignore the entity with this power if they and the entity meet this condition.
@@ -4230,6 +4389,7 @@ links:
             value:
                 desc: The value with which to apply the operation to the value.
                 type: number
+                default: 0
             resource:
                 desc: If specified, the value of this power will be used instead of the value specified in the value field.
                 type: string
@@ -4254,6 +4414,7 @@ links:
             value:
                 desc: The value with which to apply the operation to the value.
                 type: number
+                default: 0
             name:
                 desc: (Optional) A descriptive name for the modifier, describing where it comes from.
                 type: string
@@ -4284,7 +4445,7 @@ links:
                 desc: If set to true, inverts the way the hud render process (it'll look like its value is being decreased).
                 type: boolean
     damage_source:
-        desc: An Object used to specify how to deal damage to an entity.
+        desc: (DEPRECATED) An Object used to specify how to deal damage to an entity.
         href: https://origins.readthedocs.io/en/latest/types/data_types/damage_source/
         type: object
         props:
@@ -4411,6 +4572,84 @@ links:
     process_mode:
         desc: Determines how the item stack(s) in the specified inventory/inventories are processed. If "items", matching item stacks are processed, counted, or deleted as individual items. If "stacks", matching item stacks are processed, counted, matched, or deleted as one.
         enum: [items, stacks]
+    apugli_food_component:
+        desc: An Object which defines a new food component.
+        href: https://apugli.readthedocs.io/en/latest/types/data_types/food_component/
+        hunger:
+            desc: The amount of hunger shanks the food component recovers upon consumption.
+            type: integer
+        saturation:
+            desc: The amount of saturation to give the player upon consumption.
+            type: number
+        meat:
+            desc: Whether this food component counts as meat or not.
+            type: boolean
+            default: false
+        always_edible:
+            desc: Whether this food component is edible at full hunger or not.
+            type: boolean
+            default: false
+        snack:
+            desc: Whether this food component takes as long as dried kelp to eat (16 ticks) or not (32 ticks).
+            type: boolean
+            default: false
+        effect:
+            desc: A status effect and the chance of it triggering upon consuming something with this food component.
+            link: apugli_status_effect_chance
+        effects:
+            desc: A status effect and the chance of it triggering upon consuming something with this food component.
+            type: list
+            vals:
+                link: apugli_status_effect_chance
+    apugli_status_effect_chance:
+        desc: An Object which defines a status effect with a chance.
+        href: https://apugli.readthedocs.io/en/latest/types/data_types/status_effect_chance/
+        effect:
+            desc: The status effect instance which is used when the chance is successful.
+            link: status_effect
+        chance:
+            desc: The chance for the status effect to trigger.
+            type: number
+    apugli_weighted_sound_event:
+        desc: Either a Identifier that defines the sound event or an Object which defines a sound event with volume and pitch alongside weight.
+        href: https://apugli.readthedocs.io/en/latest/types/data_types/weighted_sound_event/
+        sound:
+            desc: The namespace and ID of the sound to play along with pitch and volume.
+            link: apugli_sound_event_vol_pitch
+        sounds:
+            desc: The namespace and ID of the sounds to play along with pitch and volume.
+            type: list
+            vals:
+                link: apugli_sound_event_vol_pitch
+        weight:
+            desc: The weight for the sound effect to play in a randomiser. The higher this is, the more likely it'll be selected.
+            type: integer
+            default: 1
+    apugli_sound_event_vol_pitch:
+        desc: Either a Identifier that defines the sound event or an Object which defines a sound event with pitch and volume.
+        href: https://apugli.readthedocs.io/en/latest/types/data_types/sound_event_with_volume_and_pitch/
+        sound:
+            or:
+              - name: string
+                desc: The namespace and ID of the sound to play.
+                type: string
+                allow: '*a-z0-9_#\/:.-'
+              - name: list
+                type: list
+                vals:
+                    sound:
+                        desc: The namespace and ID of the sound to play.
+                        type: string
+                        allow: '*a-z0-9_#\/:.-'
+                    volume:
+                        desc: The volume at which the sound will play.
+                        type: number
+                        default: 1
+                    pitch:
+                        desc: The pitch at which the sound will play.
+                        type: number
+                        default: 1
+        
 hooks: [preserve_single]
 or:
   - title: simple
